# ort-artifacts

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.ps1  build.sh  fetch_artifacts.py  openvino_tbb_libs_Debug.txt  openvino_tbb_libs_Release.txt
.github/scripts/: generate_manifest.py
.github/workflows/: _build-targets.yml  _build.yml  _publish.yml  build.yml  cd.yml
src/: build.ts
src/patches/all/: 0001-soname-and-dylib-name-change.patch  0004-change-dylib-output_name.patch  0004-cpuid-clang-exclude-builtin.patch  0004-openvino-disable-device-check.patch  0005-install-directml-dlls.patch  0006-fix-gcc13-free-nonheap-object-warning.patch  0006-openvino-cmake-fixes.patch  0006-openvino-fixes.patch  0007-multi-config-build-type.patch  0007-ortdevice-constants-fix.patch  0008-msvc-maxilksize.patch  0009-no-range-loop-construct.patch  0010-openvino-clang-fixes.patch  0042-openvino-fixes.patch  0042-openvino-nocpp20.patch
src/patches/all-v1.22/: 0006-openvino-fixes.patch
src/static-build/: CMakeLists.txt
